# point-location-2d

./: CMakeLists.txt  debug.h  edge.h  helper.h  main.cpp  makefile  plane.h  point.h  quadedge.h  run-tester.sh  tester.cpp  vertex.h
include/: debug.h  debug_functions.h  parsing.h  testing.h  uniform_point_rng.h
include/data_structures/: quadtree.h
include/geo_primitives/: point2D.h  point3D.h
include/planar_structure/: plane.h  triangulation.h
include/point_location/: point_location.h
include/point_location/non_walking/: naive_quadtree.h  slab_decomposition.h
include/point_location/walking/: lawson_oriented_walk.h  lawson_oriented_walk.h~  starting_edge_selector.h  walking_point_location.h
include/quad_edge/: edge.h~  plane.h  quadedge.h  vertex.h
include/quadedge_structure/: edge.h  edge_iterator.h  plane.h  quadedge.h  vertex.h
src/: edge.cpp  lawson_oriented_walk.cpp  naive_quadtree.cpp  parsing.cpp  plane.cpp  point2D.cpp  point3D.cpp  point_location.cpp  quadedge.cpp  quadtree.cpp  slab_decomposition.cpp  starting_edge_selector.cpp  triangulation.cpp  uniform_point_rng.cpp  vertex.cpp  walking_point_location.cpp
